# music-generation

./: .gitignore  pyproject.toml
notebooks/: lstm.ipynb  music-generation.ipynb
