[tool.poetry]
name = "music-generation"
version = "0.1.0"
description = ""
authors = ["Arsien Kavalievic <arsienkavalievic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.17.0"
ipython = "^8.26.0"
music21 = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
